--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ services:
   - docker
 
 install:
-  - docker-compose up -d
+  - chmod ugo+x ./bench
+  - ./bench setup docker
   - ./bench init frappe-bench
   - ./bench new-site site1.local
   - ./bench -c "echo 127.0.0.1   site1.local >> /etc/hosts"
