Updating travis' docker and compose
 This is the commit message #3:

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,20 @@ language: python
 python:
   - "2.7"
 env:
-  - DOCKER_COMPOSE_VERSION: 1.22.0
+  - DOCKER_COMPOSE_VERSION: 1.23.1
 
 services:
   - docker
+
+before_install:
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
 
 install:
   - chmod ugo+x ./dbench
