--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,7 @@ services:
 
     environment:
       - MYSQL_ROOT_PASSWORD=1234
-      - ADMIN_PASSQORD=admini
+      - ADMIN_PASSWORD=admini
       - WEBSERVER_PORT=8080
       - SITE_NAME=site2.local
 
