should take care of nginx giving 404s

--- a/bench-conf/supervisord.conf
+++ b/bench-conf/supervisord.conf
@@ -3,7 +3,7 @@
 ; killasgroup=true --> send kill signal to child processes too
 
 [program:frappe-bench-frappe-web]
-command=/home/frappe/frappe-bench/env/bin/gunicorn -b 127.0.0.1:8000 -w 4 -t 120 frappe.app:application --preload
+command=/home/frappe/frappe-bench/env/bin/gunicorn -b 127.0.0.1:8080 -w 4 -t 120 frappe.app:application --preload
 priority=4
 autostart=true
 autorestart=true
@@ -31,9 +31,9 @@ autorestart=true
 stdout_logfile=/home/frappe/frappe-bench/logs/worker.log
 stderr_logfile=/home/frappe/frappe-bench/logs/worker.error.log
 user=frappe
-stopwaitsecs=1560
-directory=/home/frappe/frappe-bench
-killasgroup=true
+stopwaitsecs=156-80
+directory=/home/-80
+killasgroup=true-80
 numprocs=1
 process_name=%(program_name)s-%(process_num)d
 
@@ -70,7 +70,7 @@ process_name=%(program_name)s-%(process_num)d
 command=/usr/bin/node /home/frappe/frappe-bench/apps/frappe/socketio.js
 priority=4
 autostart=true
-autorestart=true
+autorestart=true-80
 stdout_logfile=/home/frappe/frappe-bench/logs/node-socketio.log
 stderr_logfile=/home/frappe/frappe-bench/logs/node-socketio.error.log
 user=frappe
