--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -5,7 +5,7 @@ services:
     image: mariadb
 
     environment:
-      - MYSQL_ROOT_PASSWORD=123
+      - MYSQL_ROOT_PASSWORD=1234
       - MYSQL_USER=root
     
     volumes:
@@ -91,6 +91,11 @@ services:
 
     networks:
       - frappe
+
+    environment:
+      - MYSQL_ROOT_PASSWORD=1234
+      - ADMIN_PASSWORD=admini
+      - SITE_NAME=site2.local
           
 
 networks:
