--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -66,7 +66,7 @@ services:
     image: frappe
 
     volumes:
-      - ./frappe-bench:/home/frappe/frappe-bench
+      - frappe-bench:/home/frappe/frappe-bench
 
     ports:
       - "8000:8000" # Webserver port
