theres a relatively simple fix

--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -106,3 +106,6 @@ configs:
     file: ./conf/redis-conf.d/redis_socketio.conf
   mariadb:
     file: ./conf/mariadb-conf.d/my.cnf
+
+volumes:
+  frappe-bench:
