--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,9 @@ install:
   - sleep 8m
 
 script:
-  - docker-compose ps | grep -i frappe
-  - docker-compose ps | grep -i redis-cache
-  - docker-compose ps | grep -i redis-queue
-  - docker-compose ps | grep -i redis-socketio
-  - docker-compose ps | grep -i mariadb
+  - docker container ls | grep -i frappe
+  - docker container ls | grep -i redis-cache
+  - docker container ls | grep -i redis-queue
+  - docker container ls | grep -i redis-socketio
+  - docker container ls | grep -i mariadb
   - ./test.sh
-  - ./dbench setup docker stop
