--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - chmod ugo+x ./dbench
   - chmod ugo+x ./test.sh
   - ./dbench setup docker
+  - sleep 30
   - ./dbench new-site site1.local
   - ./dbench setup hosts
 
