some changes to the testing process

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,5 @@ install:
   - sleep 8m
 
 script:
-  - docker-compose ps | grep -i frappe
-  - docker-compose ps | grep -i redis-cache
-  - docker-compose ps | grep -i redis-queue
-  - docker-compose ps | grep -i redis-socketio
-  - docker-compose ps | grep -i mariadb
   - ./test.sh
-  - ./dbench setup docker stop
+  - ./dbench setup docker down
