fixed a bit of stuff

--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -70,6 +70,7 @@ services:
       - "8000:8000" # Webserver port
       - "9000:9000" # Socketio port
       - "6787:6787" # File Watcher port
+      - "80:80"     # Nginx port
 
     stdin_open: true
     tty: true
