--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mariadb
 
     environment:
-      - MYSQL_ROOT_PASSWORD=1234
+      - MYSQL_ROOT_PASSWORD=root
 
     volumes:
       - ./conf/mariadb-conf.d:/etc/mysql/conf.d
@@ -80,8 +80,8 @@ services:
       - redis-socketio
 
     environment:
-      - MYSQL_ROOT_PASSWORD=1234
-      - ADMIN_PASSWORD=admini
-      - SITE_NAME=site2.local
+      - MYSQL_ROOT_PASSWORD=root
+      - ADMIN_PASSWORD=admin
+      - SITE_NAME=site1.local
 
     container_name: frappe
